test-data/error/const-yawspeed-unsupported.hltas
version 1
frames
s43lj2-----|------|------|0.001|15|-|1